# emscripten_triangle_demo

./: .gitignore  CMakeLists.txt  README.md  em_run.sh  run.sh
.github/workflows/: cmake.yml
include/fluffy/: shader.h
shaders/: shader.fs  shader.vs
src/: main.cc  shader.cc
templates/: shell_minimal.html
